# cornucopia-lib

./: CMakeLists.txt  README.txt  TODO.md  build_run.sh
Cornucopia/: Algorithm.h  Anticlothoid.cpp  Anticlothoid.h  AnticlothoidProjector.cpp  CMakeLists.txt  Clothoid.cpp  Clothoid.h  Combiner.cpp  CurvePrimitive.h  Debugging.h  ErrorComputer.h  Fitter.cpp  Fitter.h  GraphConstructor.cpp  Line.cpp  Line.h  Oversketcher.h  Parameters.cpp  Parameters.h  PathFinder.cpp  PiecewiseLinearUtils.cpp  PrimitiveFitUtils.cpp  PrimitiveFitUtils.h  PrimitiveFitter.cpp  Resampler.cpp  SimpleAPI.cpp  SimpleAPI.h  Solver.cpp  defs.h  smart_ptr.h
DemoUI/: AlgorithmChoiceWidget.cpp  AlgorithmChoiceWidget.h  CMakeLists.txt  DebugWindow.cpp  DebugWindow.h  DebugWindow.ui  DebuggingImpl.cpp  DemoUIWindow.cpp  DemoUIWindow.h  Document.cpp  Document.h  GroupSelWidget.cpp  MainView.cpp  OneParamWidget.cpp  ParamWidget.cpp  SceneItem.h  ScrollScene.cpp  ScrollScene.h  ScrollView.cpp  ScrollView.h
Test/: AnticlothoidFitterTest.cpp  AnticlothoidTest.cpp  CurveDerivativesTest.cpp  CurveProjectTest.cpp  EndToEndTest.cpp  FresnelTest.cpp  PolylineTest.cpp  PrimitiveFitterTest.cpp  PrimitiveSeqTest.cpp  Test.cpp  Test.h
Tools/: AddTool.cpp  AddTool.h  CMakeLists.txt  FormatTool.cpp  FormatTool.h  Tool.cpp  Tool.h  ToolsWindow.cpp  ToolsWindow.h
scripts/: generate_index.py  make-gifs.sh  make_runs_manifest.py  plot-line.py  plot.py
viewer/: index.html
viewer/css/: style.css
viewer/js/: app.js  dataLoader.js  overlay.js  renderer.js
